--- a/app/src/index.html
+++ b/app/src/index.html
@@ -16,8 +16,7 @@
   <title>Shows App</title>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/x-icon" href="/shared/assets/images/favicon.ico">
-
-
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 
 <body>
